# EduBridge

./: .gitignore  README.md  docker-compose.dev.yml
.github/workflows/: ci.yml
client/eduBridge/: package-lock.json  package.json
client/eduBridge/src/: main.tsx
client/eduBridge/src/app/: App.tsx
client/eduBridge/src/context/: PageTitleContext.tsx
server/: .dockerignore  .env.ci  Dockerfile  entrypoint.dev.sh  pyproject.toml
server/accounts/: adapters.py  forms.py  models.py
server/accounts/migrations/: 0001_initial.py
server/accounts/templates/account/email/: email_confirmation_signup_message.txt  email_confirmation_signup_subject.txt
server/accounts/tests/: test_email_verification.py  test_login.py  test_logout.py  test_password_reset.py  test_registration.py
server/chat/: agent.py  models.py  quiz_agent.py  serializers.py  urls.py  views.py
server/core/: celery.py  settings.py  urls.py
server/drive/: models.py  urls.py
server/drive/api/v1/: node_version.py  nodes.py
server/drive/core/: tasks.py
server/drive/core/services/: azure_blob.py  node_manager.py  redis_cache.py
server/drive/migrations/: 0001_initial.py
server/drive/serializers/: node_serializers.py  node_version_serializers.py
server/drive/tests/: conftest.py  test_download_node.py  test_file_upload.py  test_folder_creation.py  test_list_nodes.py  test_list_shared_nodes.py  test_node_details.py  test_share_node.py  test_update_node.py
server/drive/utils/: permissions.py  shortcuts.py
server/embed/: models.py  tasks.py  tests.py  urls.py  views.py
(+36 files in other folders)
