[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-allauth[headless]>=65.14.1",
    "django-guardian>=3.2.0",
    "djangorestframework>=3.16.1",
    "psycopg[binary]>=3.3.2",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.2.1",
]
